--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21"
+    "autoprefixer": "^10.4.21",
+    "vite-plugin-pwa": "^1.1.1"
   }
 }
