--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Copy this file to .env.local and update the values
 
 # API Configuration
-VITE_API_URL=http://localhost:3000/api/v1
+VITE_API_URL=http://localhost:3000/api
 
 # App Configuration
 VITE_APP_NAME=BeatBloom
