Add email verification page and producer upgrade
Introduces a new VerifyEmail page and route for handling email verification. Adds support for upgrading user roles to 'producer' from the profile page, including UI and API integration. Updates types for purchases and likes in profile data, improves error handling in EditProfile, and changes the API URL in .env for local development.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Copy this file to .env.local and update the values
 
 # API Configuration
-VITE_API_URL=https://beat-bloom-api.onrender.com/api
+VITE_API_URL=http://127.0.0.1:3000/api
 
 # App Configuration
 VITE_APP_NAME=BeatBloom
